# HypModPython

./: .coverage  .flake8  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
src/HypModPython/: console.py  console_one.py  wikipedia.py
tests/: test_console.py  test_wikipedia.py
