# pyproject.toml
[tool.poetry]
name="HypModPython"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KevinDyke/HypModPython"
authors = ["Kevin James Dyke <kdyke058@gmail.com>"]
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
HypModPython = "HypModPython.console:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
