# pyproject.toml
[tool.poetry]
name="HypModPython"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KevinDyke/HypModPython"
authors = ["Kevin James Dyke <kdyke058@gmail.com>"]
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
HypModPython = "HypModPython.console:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
coverage = {extras = ["toml"], version = "^7.5.4"}
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
black = "^24.4.2"
flake8 = "^7.1.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^24.4.26"
flake8-import-order = "^0.18.2"
safety = "^3.2.4"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["HypModPython"]

[tool.coverage.report]
show_missing = true
#fail_under = 100


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
